# Voxoctis

./: .gitignore  .gitmodules  README.md
core/: CMakeLists.txt
core/include/: depth_location_code.hpp
core/src/: depth_location_code.cpp  main.cpp
extensions/VoxoctisGodot/: SConstruct  VoxoctisGodot.gdextension
extensions/VoxoctisGodot/csharp/: NativeProxy.cs  Voxoctis.cs
extensions/VoxoctisGodot/include/Voxoctis/Godot/: voxoctis_godot.hpp
extensions/VoxoctisGodot/src/: register_types.cpp  voxoctis_godot.cpp
